5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1643_2446.log
== TEST (2019-04-15 19:26:34) 
-- CODE:
s = int(input("Senha: "))
a= senha//100000
restoA = senha%100000 
b = restoA // 10000

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a= senha//100000
NameError: name 'senha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:46:18) 
-- CODE:
s = int(input("Senha: "))
a= senha//100000
restoA = senha%100000 
b = restoA // 10000
restoB = restoA%10000
c=restoB/1000
restoC=restoB%1000
d=retoC//100
restoD=restoC%100
e=restoD//10
restoE=restoD%10
f=restoE

if(b+d+f)%(a+c+e)==0:
	mensagem="acesso liberado"
else:
	mensagem="senha invalida"
print(mensagem)
-- EXECUTION TIME:
0.148625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2446/main.py", line 2, in <module>
    a= senha//100000
NameError: name 'senha' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:46:41) 
-- CODE:
s = int(input("Senha: "))
a= senha//100000
restoA = senha%100000 
b = restoA // 10000
restoB = restoA%10000
c=restoB/1000
restoC=restoB%1000
d=retoC//100
restoD=restoC%100
e=restoD//10
restoE=restoD%10
f=restoE

if(b+d+f)%(a+c+e)==0:
	mensagem="acesso liberado"
else:
	mensagem="senha invalida"
print(mensagem)
-- EXECUTION TIME:
0.132275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2446/main.py", line 2, in <module>
    a= senha//100000
NameError: name 'senha' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:48:10) 
-- CODE:
senha=int(input('senha: '))
a=senha//100000
restoA=senha%100000
b=restoA//10000
restoB=restoA%10000
c=restoB//1000
restoC=restoB%1000
d=restoC//100
restoD=restoC%100
e=restoD//10
restoE=restoD%10
f=restoE

if(b+d+f)%(a+c+e)==0:
	mensagem="acesso liberado"
else:
	mensagem="senha invalida"
print(mensagem)

-- EXECUTION TIME:
0.225285
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
